<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_global_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/global_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_export"
        android:title="@string/export_excel"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:title="@string/import_excel"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_preset"
        android:title="@string/load_preset"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reorder"
        android:title="@string/reorder_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_stats"
        android:icon="@drawable/ic_stats"
        android:title="@string/tab_statistics"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/tab_settings"
        app:showAsAction="never" />

</menu>
