<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_home" />

    <item
        android:id="@+id/universeListFragment"
        android:icon="@drawable/ic_universe"
        android:title="@string/tab_universes" />

    <item
        android:id="@+id/characterTabFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/tab_characters" />

    <item
        android:id="@+id/analysisFragment"
        android:icon="@drawable/ic_insights"
        android:title="@string/tab_analysis" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/tab_settings" />

</menu>
