<?xml version="1.0" encoding="utf-8"?>
<!-- action_preset 없음 — 이 화면은 프리셋 핸들러가 없어 죽은 항목이었다 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_global_search"
        android:icon="@drawable/ic_search"
        android:title="@string/global_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_export"
        android:title="@string/export_excel"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:title="@string/import_excel"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reorder"
        android:title="@string/reorder_mode"
        app:showAsAction="never" />

</menu>
